Did that heavy touchup to the relative-respite cutscene that (sadly) ditches the comedic side conversation.

--- a/data/level/Forest/relative-respite.cfg
+++ b/data/level/Forest/relative-respite.cfg
@@ -249,68 +249,100 @@
 			"face_right": false,
 			"label": "berd_man",
 			"on_postfight_speech": "speech_dialog(
-                                    set(level.zoom, 2),
-                                    set(level.player.facing, 1),
-                                    set(level.focus, [self, level.player]),
-                         			set(self.animation,'emote_confused'),
+									set(level.zoom, 2),
+									set(level.player.facing, 1),
+									set(level.focus, [self, level.player]),
+									set(self.animation,'emote_confused'),
 
 									set(self.animation,'emote_talk'),  
-                         			self, [~So... ~],
+									self, [~There he is!~],
 
 									set(self.animation,'emote_gesticulate'),  
-                         			self, [~I imagine this is an obvious question,\\nbut...~],
-                         			
-                         			set(self.animation,'emote_confused'),
-                         			self, [~What the hell was that?~,
-                                    ~That's a good question...~, [
-                                    	speech_dialog(
+									self, [~I must say, I'm quite glad to see you!~],
+									
+									set(self.animation,'emote_confused'),
+									self, [~Are you alright?~,
+									~That's a good question…~, [
+										speech_dialog(
 													set(level.player.animation, 'emote_nod'),
 													level.player, [~That is a very, very good question.~],
 													set(level.player.animation, 'emote_raisedfinger'),
-													level.player, [~I'll volunteer \"Poisonous Hatefungus\".\\nHow does that sound?~],
+													level.player, [~Do you have any idea what just happened?\\nAny idea what I've been through?~],
 	
 													set(self.animation,'emote_talk'),  
-													self, [~Well, besides the obvious...~],
-												
-													set(level.player.animation, 'emote_nod'),
-													level.player, [~The mother of all mushrooms?~],
+													self, [~No.~],
 
-													set(self.animation,'emote_talk'),  
-													self, [~Right. I'm wondering if there's\\nmore to it than just being being big.~],
+													set(level.player.animation, 'emote_confused'),
+													level.player, [~No?\\nWhat do you mean, no?~],													
+
+													set(self.animation,'emote_confused'),
+													self, [~I honestly completely lost you shortly after you\\nentered the swamp.  Completely.~],
+
+													set(self.animation,'emote_talk'),
+													self, [~This whole \"eyes in the sky\" thing\\ndoesn't work when everything's lost in the fog.~],
+
+													set(level.player.animation, 'emote_confused'),
+													level.player, [~How much do you know about\\nwhat I ran into down there?~],
+													
+													set(self.animation,'emote_confused'),
+													self, [~I tracked you for the first few miles,\\nbut I lost you when you went in a cave.~],
+
+													set(self.animation,'emote_talk'),
+													self, [~I actually had a run in with some of the same\\nmushrooms you did, believe it or not.~],
+													
+													set(self.animation,'emote_confused'),
+													self, [~They have quite a few fliers,\\nand they gave me a real chase.~],
+
+													set(self.animation,'emote_talk'),
+													self, [~I kept trying to dip back in to find you,\\nbut it was a big risk every time.~],
+
+													set(self.animation,'emote_angry'),
+													self, [~It did look like the mushrooms were\\ngetting bigger and meaner, every step of the way.~],
+
+													set(self.animation,'emote_gesticulate'),
+													self, [~There was a really nasty patch that\\nI just had to avoid entirely.~],
+
+													set(level.player.animation, 'emote_nod'),
+													level.player, [~And then you found me again, right?~],
+
+													set(self.animation, 'emote_wry'),
+													self, [~Something like that, yes.~],													
+													
+													
+												
+													set(level.player.animation, 'emote_geez'),
+													level.player, [~Yeah.  \"Bigger and Meaner\" is no joke.\\nI think I ran into the mother of all mushrooms.~],
+
+													set(level.player.animation, 'emote_oh'),
+													level.player, [~I really hope they don't get any bigger than that.~],
 														
 													set(self.animation,'emote_talk'),  
-													self, [~I'm wondering... do you think that\\nmight have... been the root?~],
+													self, [~I'm wondering… did you kill it?~],
 													
 													set(level.player.animation, 'emote_confused'),
-													level.player, [~As in... the source of all this? Sure.\\nAnything I missed that makes you think that?~],													
+													level.player, [~Well, geez, buddy, I'm wondering that too.\\nI'm really not sure.~],													
+
+													set(level.player.animation, 'emote_oh'),
+													level.player, [~If these have anything in common with your\\n\"garden-variety\" mushrooms, you can't just\\nkill it by killing the head.~],													
+
 
 													set(self.animation, 'emote_confused'),
-													self, [~Oh, I don't have any evidence.~],
-													set(self.animation, 'emote_gesticulate'),
-													self, [~But I think it's either that,\\nor that this is the swamp \"coming to a head\".~],
+													self, [~...~],
 													
-													set(level.player.animation, 'emote_geez'),
-													level.player, [~I'm not sure I follow...~],
-
-													set(self.animation, 'emote_confused'),
-													self, [~Well, either we \"stabbed it in the heart\",\\nso to speak, and it'll all die now...~],
-													set(self.animation, 'emote_gesticulate'),
-													self, [~Or those mushrooms are more like fruit,\\nand the swamp is like a tree that's\\ngotten big enough to bear them.~],
+													level.player, [~...~],
 													
 													set(level.player.animation, 'emote_confused'),
-													level.player, [~... no.  Please no.\\nYou think that could just grow right back!?!~],
+													level.player, [~So <em>mayyybe</em> we should just get out of here…~],
 
 													set(self.animation, 'emote_confused'),
-													self, [~Beats me! But I sure don't\\nwant to stick around and find out...~],
+													self, [~You don't say…\\nWell then!~],
 
-													set(level.player.animation, 'emote_geez'),
-													level.player, [~Right... so how do we get out of here?~],
 													
-													self, [~Well, I was just scouting the area from above...~],
+													self, [~So, I was just scouting the area from above…~],
 													set(self.animation,'emote_talk'),
-													self, [~...and it looks like this is right\\nin the middle of the polluted region.~],
+													self, [~…and it looks like this is right\\nin the middle of the polluted region.~],
 													set(self.animation,'emote_talk'),
-													self, [~There's about another mile of ruined swampland,\\nand then it starts clearing up.~],
+													self, [~If you weren't in this particular cave,\\nyou'd have a nasty trip ahead of you.~],
 													set(self.animation,'emote_wry'),
 													self, [~You, however, are in luck, because this\\ntunnel leads up to a ridge.~],
 													set(self.animation,'emote_talk'),
@@ -324,29 +356,29 @@
 													
 													set(self.facing, 0),
 													set(self.animation,'emote_wry'), 
-													self, [~No problem.  I'll be in touch!~]),
+													self, [~No problem.	 I'll be in touch!~]),
 													
 													level.player.store_event('berd_directions', 1)],
-                          
+						  
 									~Why do you care?~, [
 										speech_dialog(
 													set(level.player.animation, 'emote_geez'),
 													level.player, [~Why do <em>you</em> care?\\nNot like you're taking any heat, here.~],
 													
 													set(self.animation,'emote_wry'),
-													self, [~I ... what?\\nI didn't get a good view of it, but-~],
+													self, [~I … what?\\nI didn't get a good view of it, but-~],
 													
 													set(level.player.animation, 'emote_angry'),
 													level.player, [~<em>I ALMOST DIED, OKAY?!?</em>~],
 													
 													set(self.animation,'emote_confused'),
-													self, [~Well ... yes?  I'm asking what happened...~],
+													self, [~Well … yes?  I'm asking what happened…~],
 													
 													set(level.player.animation, 'emote_angry'),
 													level.player, [~Yeah, you're just sitting here\\nwithout a care in the world.~],
 													
 													set(level.player.animation, 'emote_impatient'),
-													level.player, [~Is this just a spectator sport, for you?!?\\nAm I just ... <em>entertainment?</em>~],
+													level.player, [~Is this just a spectator sport, for you?!?\\nAm I just … <em>entertainment?</em>~],
 													
 													set(self.animation,'emote_angry'),
 													self, [~I should think not!~],
@@ -355,55 +387,29 @@
 													level.player, [~Really, huh?\\nThen why do I do all these fights, <em>solo</em>?~],
 												
 													set(self.animation,'emote_confused'),
-													self, [~Because...  ... oh dear.\\nAre we really having this argument?~],
+													self, [~Because…	… oh dear.\\nAre we really having this argument?~],
 
 													set(level.player.animation, 'emote_geez'),
-													level.player, [~Yeah, because... ~],
+													level.player, [~Yeah, because… ~],
 
 													set(level.player.animation, 'emote_oh'),
-													level.player, [~... well ...~],
+													level.player, [~… well …~],
 
 													set(level.player.animation, 'emote_confused'),
-													level.player, [~... I'm really being a jerk, aren't I?~],
+													level.player, [~… I'm really being a jerk, aren't I?~],
 
 													set(self.animation,'emote_angry'),
 													self, [~Just a bit.~],
 
 													set(self.animation,'emote_wry'),
 													self, [~I think I'm going to\\nlet you cool off for a bit.~]),level.player.store_event('berd_angry', 1)],
-									~My new pal!~, [
-										speech_dialog(
-													set(level.player.animation, 'emote_raisedfinger'),
-													level.player, [~My new pal!  We played Canasta.~],
-													
-													set(self.animation,'emote_gesticulate'),
-													self, [~Really?  You didn't seem like you\\n were getting along too well.~],
-													
-													set(level.player.animation, 'emote_geez'),
-													level.player, [~Well, I caught him trying to meld\\n a trey while the discard pile was frozen.~],
-													set(level.player.animation, 'emote_raisedfinger'),
-													level.player, [~I was trying to impose a 10,000 point penalty.\\nHe was not happy.~],
-													
-													set(self.animation,'emote_angry'),
-													self, [~I don't think you know how to play Canasta.~],
-													
-													set(level.player.animation, 'emote_confused'),
-													level.player, [~I haven't a clue.\\nI didn't expect you to believe me.~],
-													
-													set(self.animation,'emote_talk'),
-													self, [~I <em>didn't</em>.  I did want to see\\nhow long you could keep that story up.~],
-													set(self.animation,'emote_wry'),
-													self, [~You didn't impress me.~],
-													
-													set(level.player.animation, 'emote_angry'),
-													level.player, [~Damn you, Berd!\\nYou've beaten me at my own game!~]),
-													level.player.store_event('berd_canasta', 1)],        
-                                                                            ],
-                                                                            set(level.focus, []),
-                                                                            set(level.zoom, 1),
-                                                                            lib.audio.play_music(me,'DreamlandJourney.ogg'),
-                                                                            level.player.store_event('berds_post_mushroom_boss_speech',1)
-                                                                    )",
+
+								],
+								set(level.focus, []),
+								set(level.zoom, 1),
+								lib.audio.play_music(me,'DreamlandJourney.ogg'),
+								level.player.store_event('berds_post_mushroom_boss_speech',1)
+							)",
 			"on_talk": "[if( (level.player.get_stored_event('berd_directions')),
 					speech_dialog(
 								set(level.player.animation, 'emote_confused'),
@@ -426,34 +432,34 @@
 											self, [~I know you're under a lot of stress,\\nbut that was simply uncalled for.~],
 											
 											set(level.player.animation, 'emote_raisedfinger'),
-											level.player, [~I'm not trying to justify it...~],
+											level.player, [~I'm not trying to justify it…~],
 											set(level.player.animation, 'emote_confused'),
-											level.player, [~I'm just under a lot of str...\\nahh, geez you just said <em>exactly</em> that.~],
+											level.player, [~I'm just under a lot of str…\\nahh, geez you just said <em>exactly</em> that.~],
 											set(level.player.animation, 'emote_geez'),
-											level.player, [~It's just ... it's <em>hard</em>, you know?~],
+											level.player, [~It's just … it's <em>hard</em>, you know?~],
 											set(level.player.animation, 'emote_confused'),
 											level.player, [~It feels like you've got my back just\\nuntil the <em>very moment</em> I need help.~],
 											set(level.player.animation, 'emote_oh'),
 											level.player, [~And then I'm all on my own.~],
 											
 											set(self.animation, 'emote_confused'),
-											self, [~Well...  I'm sorry for prodding at a bad moment.\\nI only asked because I was concerned about you.~],
+											self, [~Well…	 I'm sorry for prodding at a bad moment.\\nI only asked because I was concerned about you.~],
 											
 											set(level.player.animation, 'emote_confused'),
-											level.player, [~I know, but... where were you?\\nYou knew I was in trouble and you stayed up there.~],
+											level.player, [~I know, but… where were you?\\nYou knew I was in trouble and you stayed up there.~],
 											set(level.player.animation, 'emote_impatient'),
 											level.player, [~And now you're here as soon as I've handled it,\\nasking me what happened.~],
 											set(level.player.animation, 'emote_geez'),		
 											level.player, [~I hope you can see how I might find that irritating.~],
 											
 											set(self.animation, 'emote_confused'),
-											self, [~Of course.  But what was I supposed to do?~],
+											self, [~Of course.	But what was I supposed to do?~],
 											set(self.animation, 'emote_confused'),
 											self, [~I have no pretense of being a fighter.\\nI've learned that one the hard way.~],
 											set(self.animation, 'emote_talk'),
 											self, [~Not only that, but once you got down\\nin the deeps, you were rather inaccessible.~],
 											set(self.animation, 'emote_gesticulate'),
-											self, [~The fumes coming off of that swamp ...\\nI would have passed out in midair.~],
+											self, [~The fumes coming off of that swamp …\\nI would have passed out in midair.~],
 											set(self.animation, 'emote_talk'),
 											self, [~Not to mention some of those\\nmushrooms could fly, after a fashion.~],
 
@@ -462,11 +468,11 @@
 											set(level.player.animation, 'emote_confused'),
 											level.player, [~Watched, you say?~],
 											set(self.animation, 'emote_talk'),
-											self, [~Yeah.  Color me crazy, but ... uh...~],
+											self, [~Yeah.  Color me crazy, but … uh…~],
 											set(self.animation, 'emote_angry'),
 											self, [~You should have seen the way\\nthe trees were looking at me!~],
 											
-											level.player, [~...~],
+											level.player, [~…~],
 
 											set(self.animation, 'emote_confused'),
 											self, [~Let's forget I said that.~],
@@ -475,7 +481,7 @@
 											self, [~Anyhow, it's not like I've been\\ntwiddling my thumbs this whole journey.~],
 											
 											set(level.player.animation, 'emote_raisedfinger'),
-											level.player, [~Do you actually <em>have</em> any...~],
+											level.player, [~Do you actually <em>have</em> any…~],
 											
 											set(self.animation, 'emote_gesticulate'),
 											self, [~<em>I DON'T KNOW!!!</em>~],
@@ -487,7 +493,7 @@
 											self, [~I'm faster than you, so I have to keep\\nflying in circles all day or I'll lose you.~],
 											
 											set(level.player.animation, 'emote_confused'),
-											level.player, [~Couldn't you just perch on something?\\n I'm sure the trees have plenty of...~],
+											level.player, [~Couldn't you just perch on something?\\n I'm sure the trees have plenty of…~],
 											
 											set(self.animation, 'emote_angry'),
 											self, [~I <em>said</em> I didn't want to talk about it.\\nYou're not the only one risking his neck here!~],
@@ -496,18 +502,13 @@
 											level.player, [~I'm sorry Berd, I didn't take\\nyour contributions into account.~],
 											
 											set(self.animation, 'emote_talk'),
-											self, [~It's all right.  I'm glad you're\\ndoing this, and I'm happy to be helping.~],
+											self, [~It's all right.	 I'm glad you're\\ndoing this, and I'm happy to be helping.~],
 											set(self.animation, 'emote_angry'),
 											self, [~Just scale back on the aggression, would you?\\nYou could get into serious trouble like that.~],
 											
 											set(level.player.animation, 'emote_nod'),
 											level.player, [~Okay, I'll pay more attention to that.\\nTake care, Berd.~]),
-								if ((level.player.get_stored_event('berd_canasta')),
-								speech_dialog(set(self.animation, 'emote_wry'),
-								self, [~You know, if you'd like to learn\\nhow to play Canasta, I could...~],
-								
-								set(level.player.animation, 'emote_geez'),
-								level.player, [~Now's <em>not</em> the time.~])))]",
+								)]",
 			"type": "berd_npc",
 			"x": -992,
 			"y": 127
