--- a/data/level/Forest/relative-respite.cfg
+++ b/data/level/Forest/relative-respite.cfg
@@ -406,6 +406,8 @@
 
 								],
 								set(level.focus, []),
+								remove_object( get_object_or_die(level,'camera1') ),
+								schedule(1, set(level.lock_screen, null)),
 								set(level.zoom, 1),
 								lib.audio.play_music(me,'DreamlandJourney.ogg'),
 								level.player.store_event('berds_post_mushroom_boss_speech',1)
@@ -519,9 +521,18 @@
 			"custom": true,
 			"face_right": false,
 			"label": "target",
-			"on_start_level": "if(level.player.get_stored_event('berds_post_mushroom_boss_speech') or (level.player.get_stored_event('mushroom_boss_fight_won') = null), [lib.audio.play_music(me,'DreamlandJourney.ogg'),remove_object(me)],
-								[set(level.zoom, 1.5),fire_event(get_object_or_die(level, 'camera1'),'triggered')]
-								)",
+			"on_start_level": "if(level.player.get_stored_event('berds_post_mushroom_boss_speech') or (level.player.get_stored_event('mushroom_boss_fight_won') = null),
+				[
+					lib.audio.play_music(me,'DreamlandJourney.ogg'),
+					remove_object(me),
+				],
+				[
+					set(level.player.mid_xy, me.mid_xy)
+					;
+					set(level.zoom, 1.5),
+					fire_event(get_object_or_die(level, 'camera1'),'triggered'),
+				]
+			)",
 			"property_data": {
 				"_x2_bound": -938,
 				"_x_bound": -1188,
