Did some massaging on the apology conversation frogatto gives to berd.

--- a/data/level/Forest/relative-respite.cfg
+++ b/data/level/Forest/relative-respite.cfg
@@ -452,27 +452,34 @@
 											set(level.player.animation, 'emote_impatient'),
 											level.player, [~And now you're here as soon as I've handled it,\\nasking me what happened.~],
 											set(level.player.animation, 'emote_geez'),		
-											level.player, [~I hope you can see how I might find that irritating.~],
+											level.player, [~I hope you can see how that…\\n…just plain hurts.~],
 											
 											set(self.animation, 'emote_confused'),
-											self, [~Of course.	But what was I supposed to do?~],
+											self, [~Of course.  But what was I supposed to do?~],
 											set(self.animation, 'emote_confused'),
 											self, [~I have no pretense of being a fighter.\\nI've learned that one the hard way.~],
 											set(self.animation, 'emote_talk'),
-											self, [~Not only that, but once you got down\\nin the deeps, you were rather inaccessible.~],
+											self, [~I honestly lost you in the fog,\\nalmost right away.~],
 											set(self.animation, 'emote_gesticulate'),
-											self, [~The fumes coming off of that swamp …\\nI would have passed out in midair.~],
+											self, [~I spent most of my time just … searching.~],
 											set(self.animation, 'emote_talk'),
-											self, [~Not to mention some of those\\nmushrooms could fly, after a fashion.~],
+											self, [~Every time I took a low pass into the fog\\nI was choking on fumes, and …\\nas you likely know, those mushrooms can fly.~],
+											set(self.animation, 'emote_talk'),
+											self, [~I kept trying, but I never found you\\nuntil you got onto higher ground.~],
+											self, [~...~],
+											
 
-											set(self.animation, 'emote_talk'),
-											self, [~Plus, it felt like I was being watched.~],
+											set(self.animation, 'emote_gesticulate'),
+											self, [~I'm just damned glad we're out of there.\\nI got honestly, right and proper spooked.~],
+											set(self.animation, 'emote_confused'),
+											self, [~Something was watching us.~],
+											
 											set(level.player.animation, 'emote_confused'),
-											level.player, [~Watched, you say?~],
-											set(self.animation, 'emote_talk'),
-											self, [~Yeah.  Color me crazy, but … uh…~],
+											level.player, [~…\\nWhat do you mean?~],
 											set(self.animation, 'emote_angry'),
-											self, [~You should have seen the way\\nthe trees were looking at me!~],
+											self, [~I… don't know.\\nIt was just a feeling.~],
+											set(self.animation, 'emote_confused'),
+											self, [~Like there was something <em>in</em> the trees.~],
 											
 											level.player, [~…~],
 
@@ -488,32 +495,47 @@
 											set(self.animation, 'emote_gesticulate'),
 											self, [~<em>I DON'T KNOW!!!</em>~],
 											set(self.animation, 'emote_talk'),
-											self, [~I've been flying above you all along,\\nmaking sure you're headed the right way.~],
+											self, [~I'm quite tired, right now.~],
 											set(self.animation, 'emote_angry'),
-											self, [~Which has been more exhausting\\nthan I think you realize.~],
+											self, [~Just please understand;\\nI <em>also</em> almost got killed today.~],
 											set(self.animation, 'emote_talk'),
-											self, [~I'm faster than you, so I have to keep\\nflying in circles all day or I'll lose you.~],
+											self, [~I had a few very close shaves.~],
+											self, [~...~],
+											set(self.animation, 'emote_angry'),
+											self, [~You'd do well to remember:\\nI don't owe you a damn thing.~],
+											set(self.animation, 'emote_angry'),
+											self, [~I'm doing this for you <em>simply</em> as your friend.~],
+											level.player, [~...~],
+
 											
 											set(level.player.animation, 'emote_confused'),
-											level.player, [~Couldn't you just perch on something?\\n I'm sure the trees have plenty of…~],
-											
-											set(self.animation, 'emote_angry'),
-											self, [~I <em>said</em> I didn't want to talk about it.\\nYou're not the only one risking his neck here!~],
-											
+											level.player, [~I'd be a real idiot if you stopped\\nbeing my friend, huh?~],
 											set(level.player.animation, 'emote_confused'),
-											level.player, [~I'm sorry Berd, I didn't take\\nyour contributions into account.~],
+											level.player, [~I'm sorry, man.\\nI don't really have any excuses.~],
+											set(level.player.animation, 'emote_geez'),
+											level.player, [~Didn't realize how much I cared about you\\nbeing there, until you weren't.~],
+											set(level.player.animation, 'emote_confused'),
+											level.player, [~It <em>does</em> mean a lot to me.~],
+											level.player, [~...~],
+											set(level.player.animation, 'emote_geez'),
+											level.player, [~It's just selfish of me to imagine I'm\\nthe only one taking any risks, here.~], 
 											
-											set(self.animation, 'emote_talk'),
-											self, [~It's all right.	 I'm glad you're\\ndoing this, and I'm happy to be helping.~],
 											set(self.animation, 'emote_angry'),
-											self, [~Just scale back on the aggression, would you?\\nYou could get into serious trouble like that.~],
+											self, [~…\\n<em>Well then.</em>~],
+								
+											set(self.animation, 'emote_talk'),
+											self, [~As long as we're in this <em>together</em>, we'll\\nknow <em>somebody</em> cared, no matter what happens.~],
+											set(self.animation, 'emote_angry'),
+											self, [~That meant a lot to me.\\nThank you.~],
 											
+											set(self.animation, 'emote_gesticulate'),
+											self, [~Good luck on the next leg of the trip, eh?~],
 											set(level.player.animation, 'emote_nod'),
-											level.player, [~Okay, I'll pay more attention to that.\\nTake care, Berd.~]),
+											level.player, [~Likewise.~]),
 								)]",
 			"type": "berd_npc",
 			"x": -992,
-			"y": 127
+			"y": 159
 		},
 		{
 			"_uuid": "caa0402067b14d6bb69f5fa1fc661adf",
@@ -946,6 +968,62 @@
 			"type": "save_statue",
 			"x": 543,
 			"y": -813
+		},
+		{
+			"_uuid": "e4653e42a6764543a00f4459d6b76e41",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_7bf120c9",
+			"property_data": {
+				"shadow_color": {
+					"b": 0.0,
+					"g": 0.015686,
+					"r": 0.2078431
+				},
+				"shadow_opacity": 0.45
+			},
+			"type": "shadow_effect_controller",
+			"x": 437,
+			"y": 245
+		},
+		{
+			"_uuid": "5fbf911630be4dfabec7a6b440cf74b8",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_38a82a05",
+			"property_data": {
+				"_x_bound": -1104,
+				"_y_bound": -1108
+			},
+			"type": "light_controller",
+			"x": -736,
+			"y": -640
+		},
+		{
+			"_uuid": "8f9a834555874a5e946d664e7ccb45f4",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_497ed17f",
+			"property_data": {
+				"_x_bound": -1408,
+				"_y_bound": -208
+			},
+			"type": "light_controller",
+			"x": -972,
+			"y": -44
+		},
+		{
+			"_uuid": "db4571606d464fd6b3c662476eba7b12",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_4316e697",
+			"property_data": {
+				"_x_bound": -660,
+				"_y_bound": -484
+			},
+			"type": "light_controller",
+			"x": -384,
+			"y": -384
 		}
 	],
 	"dimensions": [-2336,-1888,1919,599],
@@ -1133,13 +1211,13 @@ nbr,nbr,nbr,nbr,nbr,,,,nbr,nbr,nbr,nbr,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,,,,n
 ,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,crk,crk,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,crk,crk,crk,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
 ,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,crk,crk,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,crk,crk,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,crk,crk,crk,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,crk,crk,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,crk,crk,crk,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,,,,,,crk,crk,crk,crk,crk,,,,,crk,crk,crk,crk,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,,,,,,,,,crk,crk,,,,,crk,crk,crk,crk,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,crk,crk,crk,,,,,,,,crk,crk,crk,crk,crk,crk,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,crk,crk,crk,,,,,,,,crk,crk,crk,crk,crk,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,crk,crk,crk,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,crk,crk,crk,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,crk,crk,crk,crk,,,,,,,,,,,,crk,crk,crk,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
-,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,crk,crk,crk,,,,,,,,,crk,crk,crk,crk,crk,crk,,,,,,,,crk,crk,crk,crk,crk,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
+,,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,crk,crk,crk,,,,,,,,,crk,crk,crk,crk,crk,crk,,,,,,,,crk,crk,crk,crk,crk,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
 ,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,crk,crk,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,crk,crk,crk,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,crk,crk,crk,crk,crk,crk,crk,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
 ,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,crk,crk,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,crk,crk,crk,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
 ,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
