Added an overlay graphic for the pillars on the front of the new seaside house.cfg.

--- a/data/objects/props/buildings/seaside/seaside_house_2_bottom.cfg
+++ b/data/objects/props/buildings/seaside/seaside_house_2_bottom.cfg
@@ -6,7 +6,7 @@ prototype: ["cosmetic_effects"],
 properties: {
 	material_sound: "enum wood_solid",
 			},
-//on_create: "spawn('seaside_house_2.overlay',x+224*facing,y+784,facing)",
+on_create: "spawn('seaside_house_2_bottom.overlay', mid_x + 72 * facing, mid_y + 68, facing)",
 editor_info: {
 	category: "buildings, seaside",
 },
@@ -30,8 +30,8 @@ object_type: {
 	zsub_order: 2,
 	animation: {
 		id: "normal",
-		image: "props/buildings/seaside-house-2_overlay.png",
-		rect: [0,0,175,79],
+		image: "props/buildings/seaside-house-2-bottom_overlay.png",
+		rect: [0,0,255,255],
 		palettes: "@include data/palettes.cfg:seaside_palettes",
 	},
 },}
