Added a solid mask to the seaside house.  Adjusted the overlay spawn point because apparently solid masks screw with the solidity.

--- a/data/objects/props/buildings/seaside/seaside_house_2_bottom.cfg
+++ b/data/objects/props/buildings/seaside/seaside_house_2_bottom.cfg
@@ -6,7 +6,7 @@ prototype: ["cosmetic_effects"],
 properties: {
 	material_sound: "enum wood_solid",
 			},
-on_create: "spawn('seaside_house_2_bottom.overlay', mid_x + 72 * facing, mid_y + 68, facing)",
+on_create: "spawn('seaside_house_2_bottom.overlay', mid_x + 110 * facing, mid_y + 136, facing)",
 editor_info: {
 	category: "buildings, seaside",
 },
@@ -16,11 +16,11 @@ animation: {
 	rect: [0,0,319,319],
 	palettes: "@include data/palettes.cfg:seaside_palettes",
 },
-//solid: {
-//	image: "props/buildings/seaside-house-2-top_solidity.png",
-//	area: [0,0,319,319],
-//	id: "body",
-//},
+solid: {
+	image: "props/buildings/seaside-house-2-bottom_solidity.png",
+	area: [0,0,319,319],
+	id: "body",
+},
 
 
 object_type: {
