Fixed an assert that was happening when current generators are invisible.

--- a/data/objects/effects/misc/current_generator.cfg
+++ b/data/objects/effects/misc/current_generator.cfg
@@ -48,6 +48,7 @@ properties: {
 on_setup_particles: "[
 	//Set up the particle effects.
 	if(invisible, [
+		add_object(air_particles); //gotta do this first, or the particles don't exist to be set
 		air_particles.turn_off,
 	],[
 		add_object(air_particles); //gotta do this first, or the particles don't exist to be set
